k8s/backend1.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend1-service
spec:
  ports:
  - port: 3000
  type: LoadBalancer
  selector:
    app: backend1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1-deployment
spec:
  selector:
    matchLabels:
      app: backend1
  template:
    metadata:
      labels:
        app: backend1
    spec:
      containers:
      - name: backend1
        image: backend-example
        ports:
        - containerPort: 3000
