k8s/backend2.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend2-service
spec:
  ports:
  - port: 3000
  type: LoadBalancer
  selector:
    app: backend2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2-deployment
spec:
  selector:
    matchLabels:
      app: backend2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
      - name: backend2
        image: backend-example
        ports:
        - containerPort: 3000
