k8s/postgres-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  labels:
    app: postgres-db
spec:
  ports:
    - name: "5431"
      port: 5431
      targetPort: 5431
  selector:
    app: postgres-db
status:
  loadBalancer: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres-db
  name: postgres-db
spec:
  selector:
    matchLabels:
      app: postgres-db
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: mydb
            - name: PGPORT
              value: "5431"
            - name: POSTGRES_PASSWORD
              value: secret
            - name: PGPASSWORD
              value: secret
            - name: POSTGRES_USER
              value: admin
          image: postgres:10-alpine
          readinessProbe:
            exec:
              command: ["psql", "-w", "-U", "admin", "-d", "mydb", "-c", "SELECT 1"]
            initialDelaySeconds: 15
            timeoutSeconds: 2          
          livenessProbe:
            exec:
              command: ["psql", "-w", "-U", "admin", "-d", "mydb", "-c", "SELECT 1"]
            failureThreshold: 5  
            initialDelaySeconds: 45
            timeoutSeconds: 5            
          name: postgres-db
          ports:
            - containerPort: 5431
          resources: {}
      restartPolicy: Always
status: {}
