k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
    - host: backend1.lomt.org
      http:
        paths:
          - backend:
              serviceName: backend1-service
              servicePort: 3000
    - host: backend2.lomt.org
      http:
        paths:
          - backend:
              serviceName: backend2-service
              servicePort: 3000
